--- a/Tic_Tac_Toe_Server/Tic_Tac_Toe.Server.csproj
+++ b/Tic_Tac_Toe_Server/Tic_Tac_Toe.Server.csproj
@@ -10,10 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0-preview.1.22076.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers" />
+    <PackageReference Include="System.Text.Json" Version="6.0.2" />
   </ItemGroup>
 
 </Project>
