--- a/Tic_Tac_Toe_Client/Tic_Tac_Toe.Client.csproj
+++ b/Tic_Tac_Toe_Client/Tic_Tac_Toe.Client.csproj
@@ -8,4 +8,9 @@
     <RootNamespace>Tic_Tac_Toe.Client</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+  </ItemGroup>
+
 </Project>
