--- a/Tic_Tac_Toe_Server/TicTacToe.Server.csproj
+++ b/Tic_Tac_Toe_Server/TicTacToe.Server.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Tic_Tac_Toe.Server</RootNamespace>
+    <RootNamespace>TicTacToe.Server</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
