Added tests for AccountController and StatisticController

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,3 +25,10 @@ build:
     - 'dotnet build --no-restore'
   tags:
     - docker-shared
+
+tests:
+  stage: test
+  script:
+    - 'dotnet test --no-restore'
+  tags:
+    - docker-shared
