Added tests, refactor code

--- a/ClientTests/ClientTests.csproj
+++ b/ClientTests/ClientTests.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tic_Tac_Toe_Client\TicTacToe.Client.csproj" />
+  </ItemGroup>
+
 </Project>
